--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -11,11 +11,35 @@
 <body>
 
     <div class="w-2/3 mx-auto mt-10">
-        {% comment %} <input type="text" class="border-2"> {% endcomment %}
+        
+        {% if form.non_field_errors %}
+            <ul>
+                {% for error in form.non_field_errors %}
+                    <li class="text-red-500">{{ error }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
 
         <form action="" method="POST">
             {% csrf_token %}
-            {{form.as_p}}
+            {% comment %} {{form.as_p}} {% endcomment %}
+
+            {% for field in form %}
+                <p>
+                    <label for="{{field.id_for_label}}">
+                        {{field.label}}
+                    </label>
+                    {{field}}
+
+                    {% if field.errors %}
+                        <ul>
+                            {% for error in field.errors %}
+                                <li class="text-red-500">{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                </p>
+            {% endfor %}
 
             <button type="submit" class="bg-blue-400 p-2">Sign Up</button>
         </form>
