--- a/users/templates/admin/create_group.html
+++ b/users/templates/admin/create_group.html
@@ -1,7 +1,7 @@
 {% extends "admin/dashboard.html" %}
 
 {% block content %}
-    <div class="max-w-md border mx-auto mt-10 bg-white p-8 rounded-xl shadow-md">
+    <div class="max-w-2xl border mx-auto mt-10 bg-white p-8 rounded-xl shadow-md">
         <h2 class="text-2xl font-semibold text-center text-gray-800 mb-6">Assign Role</h2>
 
         {% for msg in messages %}
