--- a/users/templates/admin/dashboard.html
+++ b/users/templates/admin/dashboard.html
@@ -16,12 +16,12 @@
           >
           <div class="hidden md:flex space-x-4">
             <a
-              href="admin-dashboard.html"
+              href="{% url 'admin-dashboard' %}"
               class="text-gray-600 hover:text-gray-800"
               >Dashboard</a
             >
             <a href="#" class="text-gray-600 hover:text-gray-800">Tasks</a>
-            <a href="group-list.html" class="text-gray-600 hover:text-gray-800"
+            <a href="{% url 'group-list' %}" class="text-gray-600 hover:text-gray-800"
               >Groups</a
             >
             <a
@@ -47,14 +47,12 @@
                 class="absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg py-1 hidden"
               >
                 <a
-                  href="manager-dashboard.html"
-                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
-                  >Dashboard</a
-                >
-                <form method="post" action="logout.html">
-                  <button
-                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
-                  >
+                  href="{% url 'admin-dashboard' %}"
+                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
+                  Dashboard
+                </a>
+                <form method="post" action="{% url 'log-out' %}">
+                  <button class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
                     Logout
                   </button>
                 </form>
@@ -83,6 +81,7 @@
             </div>
           </div>
         </div>
+
         <div id="mobile-menu" class="md:hidden hidden mt-4">
           <a href="#" class="block py-2 text-gray-600 hover:text-gray-800"
             >Dashboard</a
@@ -93,7 +92,7 @@
           <a href="#" class="block py-2 text-gray-600 hover:text-gray-800"
             >Groups</a
           >
-          <a href="{% url 'create-group' %}" class="block py-2 text-gray-600 hover:text-gray-800"
+          <a href="#" class="block py-2 text-gray-600 hover:text-gray-800"
             >Create Group</a
           >
         </div>
