--- a/users/templates/admin/group_list.html
+++ b/users/templates/admin/group_list.html
@@ -21,7 +21,7 @@
                             <td class="border border-gray-300 px-4 py-2">
                             <ul class="list-disc list-inside">
                                 {% for permission in group.permissions.all %}
-                                    <li>{{permission.name}}</li>
+                                    <li>{{permission.name}} |--> {{permission.codename}}</li>
                                 {% empty %}
                                     <span class="italic">No permissions assigned</span>
                                 {% endfor %}
