--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -7,6 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TaskMaster - Efficient Task Management</title>
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        font-family: "Inter", sans-serif;
+      }
+    </style>
   </head>
 
   <body class="font-sans bg-gray-100">
@@ -19,7 +31,7 @@
 
     <main>
       {% block content %}
-        {% include "homee.html" %}
+        
       {% endblock content %}
     </main>
 
