--- a/tasks/templates/task_details.html
+++ b/tasks/templates/task_details.html
@@ -85,11 +85,11 @@
                     <div class="flex items-center gap-4">
                         <div
                             class="w-12 h-12 rounded-full {% cycle 'bg-red-500' 'bg-green-500' 'bg-blue-500' 'bg-yellow-500' 'bg-purple-500' 'bg-pink-500'%} text-white flex items-center justify-center ">
-                            {{emp.name|slice:":2"|upper}}
+                            {{emp.username|slice:":2"|upper}}
                         </div>
                         <div>
-                            <div class="font-semibold">{{emp.name}}</div>
-                            <div class="text-gray-600">Administrator</div>
+                            <div class="font-semibold">{{emp.first_name}} {{emp.last_name}}</div>
+                            <div class="text-gray-600">{{emp.groups.first.name|default:"No Name Assigned"}}</div>
                         </div>
                     </div>
                 {% endfor %}
@@ -102,6 +102,14 @@
               >
                 Delete Task
               </button>
+            </div>
+             <!-- Modification -->
+            <div class= "flex gap-2 col-span-2">
+              <a href="{% url "update-task" task.id %}" class="p-2  border border-black rounded-lg bg-yellow-400">Edit</a>
+              <form action="{% url "delete-task" task.id %}" method="POST">
+              {% csrf_token %}
+                <button type="submit" class="p-2 border border-black rounded-lg bg-red-400">Delete</button>
+              </form>
             </div>
           </div>
         </div>
