--- a/tasks/templates/task_form.html
+++ b/tasks/templates/task_form.html
@@ -21,7 +21,7 @@
     {% endif %}
 
     <!-- Form -->
-    <form method="POST" class="space-y-4">
+    <form method="POST" class="space-y-4" enctype="multipart/form-data">
       {% csrf_token %}
 
       <!-- Render Task Form Fields -->
