--- a/core/templates/headers/guest_header.html
+++ b/core/templates/headers/guest_header.html
@@ -55,10 +55,10 @@
         <a href="#" class="block py-2 text-gray-600 hover:text-gray-800"
           >Contact</a
         >
-        <a href="#" class="block py-2 text-gray-600 hover:text-gray-800"
+        <a href="{% url 'sign-in' %}" class="block py-2 text-gray-600 hover:text-gray-800"
           >Sign In</a
         >
-        <a href="#" class="block py-2 text-gray-600 hover:text-gray-800"
+        <a href="{% url 'sign-up' %}" class="block py-2 text-gray-600 hover:text-gray-800"
           >Sign Up</a
         >
       </div>
