--- a/core/templates/headers/manager_header.html
+++ b/core/templates/headers/manager_header.html
@@ -33,7 +33,7 @@
               class="absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg py-1 hidden"
             >
               <a
-                href="{% url 'admin-dashboard' %}"
+                href="{% url 'mgr-dashboard' %}"
                 class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
                 Dashboard
               </a>
@@ -70,10 +70,10 @@
       </div>
 
       <div id="mobile-menu" class="md:hidden hidden mt-4">
-        <a href="#" class="block py-2 text-gray-600 hover:text-gray-800"
+        <a href="{% url 'mgr-dashboard' %}" class="block py-2 text-gray-600 hover:text-gray-800"
           >Dashboard</a
         >
-        <a href="#" class="block py-2 text-gray-600 hover:text-gray-800"
+        <a href="{% url 'create-task' %}" class="block py-2 text-gray-600 hover:text-gray-800"
           >Create Group</a
         >
       </div>
