--- a/static/css/output.css
+++ b/static/css/output.css
@@ -863,6 +863,18 @@ video {
   max-width: 36rem;
 }
 
+.max-w-lg {
+  max-width: 32rem;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
+}
+
+.max-w-4xl {
+  max-width: 56rem;
+}
+
 .table-auto {
   table-layout: auto;
 }
