--- a/users/templates/accounts/profile.html
+++ b/users/templates/accounts/profile.html
@@ -1,15 +1,10 @@
+{% extends "base.html" %}
 {% load custom_filters %}
 
+{% block title %}Profile{% endblock title %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Profile</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-gray-100">
+{% block content %}
+  <div class="bg-gray-100">
     <div class="flex min-h-screen">
       <!-- Sidebar -->
       <aside class="w-64 bg-white shadow-md">
@@ -87,5 +82,5 @@
         </div>
       </main>
     </div>
-  </body>
-</html>
+  </div>
+  {% endblock content %}
