--- a/users/templates/admin/assign_role.html
+++ b/users/templates/admin/assign_role.html
@@ -1,5 +1,5 @@
-{% comment %} {% extends "admin/dashboard.html" %} {% endcomment %}
-{% extends "base.html" %}
+{% extends "admin/dashboard.html" %}
+{% comment %} {% extends "base.html" %} {% endcomment %}
 
 {% block content %}
     <div class="max-w-md border mx-auto mt-10 bg-white p-8 rounded-xl shadow-md">
